some problem in second table solved

--- a/response files/dashboard.css
+++ b/response files/dashboard.css
@@ -694,6 +694,12 @@ nav .navigation-container .cart-and-search-container {
     padding: 5px;
 }
 
+.employees-stats-container .employees-details-columns {
+    margin-top: 7em;
+    color: #ff9800;
+
+}
+
 /* =========== { END DASHBOARD => EMPLOYEEES INFO } ===========*/
 
 /* =========== { START FOOTER } ===========*/
