--- a/response files/product.css
+++ b/response files/product.css
@@ -43,7 +43,7 @@ nav .navigation-container .open-and-close-menu {
 /* =========== { SATRT SHOPPING CART } ===========*/
 
 .shooping-cart {
-    margin: 2em 0;
+    margin-top: 2em;
     width: 98%;
 }
 
@@ -191,7 +191,7 @@ nav .navigation-container .open-and-close-menu {
 /* =========== { SATRT SHOPPING CART } ===========*/
 
 .shooping-cart {
-    margin: 2em 0;
+    margin-top: 2em;
     width: 98%;
 }
 
@@ -278,7 +278,7 @@ nav .navigation-container .open-and-close-menu {
 /* =========== { SATRT SHOPPING CART } ===========*/
 
 .shooping-cart {
-    margin: 2em 0;
+    margin-top: 2em;
     width: 98%;
 }
 
@@ -342,7 +342,7 @@ nav .navigation-container .open-and-close-menu {
 /* =========== { SATRT SHOPPING CART } ===========*/
 
 .shooping-cart {
-    margin: 2em 0;
+    margin-top: 2em;
     width: 100%;
 }
 
